pkg/ppl/parser/generated/ppl_parser.go
// Code generated from PPLParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package generated // PPLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PPLParser struct {
	*antlr.BaseParser
}

var PPLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pplparserParserInit() {
	staticData := &PPLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "'where'", "'fields'", "'stats'", "'sort'", "'head'", "'describe'",
		"'showdatasources'", "'explain'", "'chart'", "'timechart'", "'bin'",
		"'dedup'", "'top'", "'rare'", "'eval'", "'rename'", "'replace'", "'fillnull'",
		"'parse'", "'rex'", "'lookup'", "'append'", "'join'", "'table'", "'eventstats'",
		"'streamstats'", "'reverse'", "'flatten'", "'by'", "'as'", "'with'",
		"'output'", "'type'", "'value'", "'inner'", "'left'", "'right'", "'outer'",
		"'full'", "'span'", "'bins'", "'keepevents'", "'consecutive'", "'sortby'",
		"'limit'", "'countfield'", "'percentfield'", "'showcount'", "'showperc'",
		"'useother'", "'otherstr'", "'nullstr'", "'asc'", "'desc'", "", "",
		"", "'='", "", "'<'", "'<='", "'>'", "'>='", "", "", "'+'", "'-'", "'*'",
		"'/'", "'%'", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "'|'", "','", "'.'",
		"'('", "')'", "'['", "']'",
	}
	staticData.SymbolicNames = []string{
		"", "SEARCH", "WHERE", "FIELDS", "STATS", "SORT", "HEAD", "DESCRIBE",
		"SHOWDATASOURCES", "EXPLAIN", "CHART", "TIMECHART", "BIN", "DEDUP",
		"TOP", "RARE", "EVAL", "RENAME", "REPLACE", "FILLNULL", "PARSE", "REX",
		"LOOKUP", "APPEND", "JOIN", "TABLE", "EVENTSTATS", "STREAMSTATS", "REVERSE",
		"FLATTEN", "BY", "AS", "WITH", "OUTPUT", "TYPE", "VALUE", "INNER", "LEFT",
		"RIGHT", "OUTER", "FULL", "SPAN", "BINS", "KEEPEVENTS", "CONSECUTIVE",
		"SORTBY", "LIMIT", "COUNTFIELD", "PERCENTFIELD", "SHOWCOUNT", "SHOWPERC",
		"USEOTHER", "OTHERSTR", "NULLSTR", "ASC", "DESC", "AND", "OR", "NOT",
		"EQ", "NEQ", "LT", "LTE", "GT", "GTE", "LIKE", "IN", "PLUS", "MINUS",
		"STAR", "SLASH", "PERCENT", "TRUE", "FALSE", "NULL", "CASE", "WHEN",
		"THEN", "ELSE", "END", "COUNT", "SUM", "AVG", "MIN", "MAX", "DC", "DISTINCT_COUNT",
		"VAR", "VARP", "STDEV", "STDEVP", "PERCENTILE", "MEDIAN", "MODE", "EARLIEST",
		"LATEST", "VALUES", "RANGE", "DISTINCT", "PIPE", "COMMA", "DOT", "LPAREN",
		"RPAREN", "LBRACKET", "RBRACKET", "IDENTIFIER", "INTEGER", "DECIMAL",
		"STRING", "WS", "LINE_COMMENT", "BLOCK_COMMENT",
	}
	staticData.RuleNames = []string{
		"query", "searchQuery", "processingCommand", "metadataCommand", "searchCommand",
		"whereCommand", "fieldsCommand", "fieldList", "statsCommand", "aggregationList",
		"aggregation", "sortCommand", "sortFieldList", "sortField", "headCommand",
		"chartCommand", "chartOptions", "timechartCommand", "timechartOptions",
		"timeSpan", "binCommand", "binOptions", "dedupCommand", "dedupOptions",
		"topCommand", "topOptions", "rareCommand", "evalCommand", "evalAssignment",
		"renameCommand", "renameAssignment", "replaceCommand", "replaceMapping",
		"fillnullCommand", "fillnullAssignment", "parseCommand", "rexCommand",
		"lookupCommand", "lookupOutputList", "lookupOutputField", "appendCommand",
		"joinCommand", "joinType", "tableCommand", "eventstatsCommand", "streamstatsCommand",
		"streamstatsOptions", "reverseCommand", "flattenCommand", "booleanValue",
		"describeCommand", "showDatasourcesCommand", "explainCommand", "expression",
		"orExpression", "andExpression", "notExpression", "comparisonExpression",
		"additiveExpression", "multiplicativeExpression", "unaryExpression",
		"primaryExpression", "literal", "fieldReference", "functionCall", "aggregationFunction",
		"expressionList", "caseExpression", "whenClause",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PPLParserInit initializes any static state used to implement PPLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPPLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PPLParserInit() {
	staticData := &PPLParserParserStaticData
	staticData.once.Do(pplparserParserInit)
}

// NewPPLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPPLParser(input antlr.TokenStream) *PPLParser {
	PPLParserInit()
	this := new(PPLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PPLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PPLParser.g4"

	return this
}

// PPLParser tokens.
const (
	PPLParserEOF             = antlr.TokenEOF
	PPLParserSEARCH          = 1
	PPLParserWHERE           = 2
	PPLParserFIELDS          = 3
	PPLParserSTATS           = 4
	PPLParserSORT            = 5
	PPLParserHEAD            = 6
	PPLParserDESCRIBE        = 7
	PPLParserSHOWDATASOURCES = 8
	PPLParserEXPLAIN         = 9
	PPLParserCHART           = 10
	PPLParserTIMECHART       = 11
	PPLParserBIN             = 12
	PPLParserDEDUP           = 13
	PPLParserTOP             = 14
	PPLParserRARE            = 15
	PPLParserEVAL            = 16
	PPLParserRENAME          = 17
	PPLParserREPLACE         = 18
	PPLParserFILLNULL        = 19
	PPLParserPARSE           = 20
	PPLParserREX             = 21
	PPLParserLOOKUP          = 22
	PPLParserAPPEND          = 23
	PPLParserJOIN            = 24
	PPLParserTABLE           = 25
	PPLParserEVENTSTATS      = 26
	PPLParserSTREAMSTATS     = 27
	PPLParserREVERSE         = 28
	PPLParserFLATTEN         = 29
	PPLParserBY              = 30
	PPLParserAS              = 31
	PPLParserWITH            = 32
	PPLParserOUTPUT          = 33
	PPLParserTYPE            = 34
	PPLParserVALUE           = 35
	PPLParserINNER           = 36
	PPLParserLEFT            = 37
	PPLParserRIGHT           = 38
	PPLParserOUTER           = 39
	PPLParserFULL            = 40
	PPLParserSPAN            = 41
	PPLParserBINS            = 42
	PPLParserKEEPEVENTS      = 43
	PPLParserCONSECUTIVE     = 44
	PPLParserSORTBY          = 45
	PPLParserLIMIT           = 46
	PPLParserCOUNTFIELD      = 47
	PPLParserPERCENTFIELD    = 48
	PPLParserSHOWCOUNT       = 49
	PPLParserSHOWPERC        = 50
	PPLParserUSEOTHER        = 51
	PPLParserOTHERSTR        = 52
	PPLParserNULLSTR         = 53
	PPLParserASC             = 54
	PPLParserDESC            = 55
	PPLParserAND             = 56
	PPLParserOR              = 57
	PPLParserNOT             = 58
	PPLParserEQ              = 59
	PPLParserNEQ             = 60
	PPLParserLT              = 61
	PPLParserLTE             = 62
	PPLParserGT              = 63
	PPLParserGTE             = 64
	PPLParserLIKE            = 65
	PPLParserIN              = 66
	PPLParserPLUS            = 67
	PPLParserMINUS           = 68
	PPLParserSTAR            = 69
	PPLParserSLASH           = 70
	PPLParserPERCENT         = 71
	PPLParserTRUE            = 72
	PPLParserFALSE           = 73
	PPLParserNULL            = 74
	PPLParserCASE            = 75
	PPLParserWHEN            = 76
	PPLParserTHEN            = 77
	PPLParserELSE            = 78
	PPLParserEND             = 79
	PPLParserCOUNT           = 80
	PPLParserSUM             = 81
	PPLParserAVG             = 82
	PPLParserMIN             = 83
	PPLParserMAX             = 84
	PPLParserDC              = 85
	PPLParserDISTINCT_COUNT  = 86
	PPLParserVAR             = 87
	PPLParserVARP            = 88
	PPLParserSTDEV           = 89
	PPLParserSTDEVP          = 90
	PPLParserPERCENTILE      = 91
	PPLParserMEDIAN          = 92
	PPLParserMODE            = 93
	PPLParserEARLIEST        = 94
	PPLParserLATEST          = 95
	PPLParserVALUES          = 96
	PPLParserRANGE           = 97
	PPLParserDISTINCT        = 98
	PPLParserPIPE            = 99
	PPLParserCOMMA           = 100
	PPLParserDOT             = 101
	PPLParserLPAREN          = 102
	PPLParserRPAREN          = 103
	PPLParserLBRACKET        = 104
	PPLParserRBRACKET        = 105
	PPLParserIDENTIFIER      = 106
	PPLParserINTEGER         = 107
	PPLParserDECIMAL         = 108
	PPLParserSTRING          = 109
	PPLParserWS              = 110
	PPLParserLINE_COMMENT    = 111
	PPLParserBLOCK_COMMENT   = 112
)

// PPLParser rules.
const (
	PPLParserRULE_query                    = 0
	PPLParserRULE_searchQuery              = 1
	PPLParserRULE_processingCommand        = 2
	PPLParserRULE_metadataCommand          = 3
	PPLParserRULE_searchCommand            = 4
	PPLParserRULE_whereCommand             = 5
	PPLParserRULE_fieldsCommand            = 6
	PPLParserRULE_fieldList                = 7
	PPLParserRULE_statsCommand             = 8
	PPLParserRULE_aggregationList          = 9
	PPLParserRULE_aggregation              = 10
	PPLParserRULE_sortCommand              = 11
	PPLParserRULE_sortFieldList            = 12
	PPLParserRULE_sortField                = 13
	PPLParserRULE_headCommand              = 14
	PPLParserRULE_chartCommand             = 15
	PPLParserRULE_chartOptions             = 16
	PPLParserRULE_timechartCommand         = 17
	PPLParserRULE_timechartOptions         = 18
	PPLParserRULE_timeSpan                 = 19
	PPLParserRULE_binCommand               = 20
	PPLParserRULE_binOptions               = 21
	PPLParserRULE_dedupCommand             = 22
	PPLParserRULE_dedupOptions             = 23
	PPLParserRULE_topCommand               = 24
	PPLParserRULE_topOptions               = 25
	PPLParserRULE_rareCommand              = 26
	PPLParserRULE_evalCommand              = 27
	PPLParserRULE_evalAssignment           = 28
	PPLParserRULE_renameCommand            = 29
	PPLParserRULE_renameAssignment         = 30
	PPLParserRULE_replaceCommand           = 31
	PPLParserRULE_replaceMapping           = 32
	PPLParserRULE_fillnullCommand          = 33
	PPLParserRULE_fillnullAssignment       = 34
	PPLParserRULE_parseCommand             = 35
	PPLParserRULE_rexCommand               = 36
	PPLParserRULE_lookupCommand            = 37
	PPLParserRULE_lookupOutputList         = 38
	PPLParserRULE_lookupOutputField        = 39
	PPLParserRULE_appendCommand            = 40
	PPLParserRULE_joinCommand              = 41
	PPLParserRULE_joinType                 = 42
	PPLParserRULE_tableCommand             = 43
	PPLParserRULE_eventstatsCommand        = 44
	PPLParserRULE_streamstatsCommand       = 45
	PPLParserRULE_streamstatsOptions       = 46
	PPLParserRULE_reverseCommand           = 47
	PPLParserRULE_flattenCommand           = 48
	PPLParserRULE_booleanValue             = 49
	PPLParserRULE_describeCommand          = 50
	PPLParserRULE_showDatasourcesCommand   = 51
	PPLParserRULE_explainCommand           = 52
	PPLParserRULE_expression               = 53
	PPLParserRULE_orExpression             = 54
	PPLParserRULE_andExpression            = 55
	PPLParserRULE_notExpression            = 56
	PPLParserRULE_comparisonExpression     = 57
	PPLParserRULE_additiveExpression       = 58
	PPLParserRULE_multiplicativeExpression = 59
	PPLParserRULE_unaryExpression          = 60
	PPLParserRULE_primaryExpression        = 61
	PPLParserRULE_literal                  = 62
	PPLParserRULE_fieldReference           = 63
	PPLParserRULE_functionCall             = 64
	PPLParserRULE_aggregationFunction      = 65
	PPLParserRULE_expressionList           = 66
	PPLParserRULE_caseExpression           = 67
	PPLParserRULE_whenClause               = 68
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ExplainCommand() IExplainCommandContext
	SearchQuery() ISearchQueryContext
	EOF() antlr.TerminalNode
	MetadataCommand() IMetadataCommandContext

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PPLParserRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PPLParserRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PPLParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) ExplainCommand() IExplainCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExplainCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExplainCommandContext)
}

func (s *QueryContext) SearchQuery() ISearchQueryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISearchQueryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISearchQueryContext)
}

func (s *QueryContext) EOF() antlr.TerminalNode {
	return s.GetToken(PPLParserEOF, 0)
}

func (s *QueryContext) MetadataCommand() IMetadataCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetadataCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetadataCommandContext)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PPLParserListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PPLParserListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (s *QueryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PPLParserVisitor:
		return t.VisitQuery(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PPLParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PPLParserRULE_query)
	p.SetState(148)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PPLParserEXPLAIN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(138)
			p.ExplainCommand()
		}
		{
			p.SetState(139)
			p.SearchQuery()
		}
		{
			p.SetState(140)
			p.Match(PPLParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PPLParserSEARCH:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(142)
			p.SearchQuery()
		}
		{
			p.SetState(143)
			p.Match(PPLParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case PPLParserDESCRIBE, PPLParserSHOWDATASOURCES:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(145)
			p.MetadataCommand()
		}
		{
			p.SetState(146)
			p.Match(PPLParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISearchQueryContext is an interface to support dynamic dispatch.
type ISearchQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SearchCommand() ISearchCommandContext
	AllPIPE() []antlr.TerminalNode
	PIPE(i int) antlr.TerminalNode
	AllProcessingCommand() []IProcessingCommandContext
	ProcessingCommand(i int) IProcessingCommandContext

	// IsSearchQueryContext differentiates from other interfaces.
	IsSearchQueryContext()
}

type SearchQueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySearchQueryContext() *SearchQueryContext {
	var p = new(SearchQueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PPLParserRULE_searchQuery
	return p
}

func InitEmptySearchQueryContext(p *SearchQueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PPLParserRULE_searchQuery
}

func (*SearchQueryContext) IsSearchQueryContext() {}

func NewSearchQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SearchQueryContext {
	var p = new(SearchQueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PPLParserRULE_searchQuery

	return p
}

func (s *SearchQueryContext) GetParser() antlr.Parser { return s.parser }

func (s *SearchQueryContext) SearchCommand() ISearchCommandContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISearchCommandContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISearchCommandContext)
}

func (s *SearchQueryContext) AllPIPE() []antlr.TerminalNode {
	return s.GetTokens(PPLParserPIPE)
}

func (s *SearchQueryContext) PIPE(i int) antlr.TerminalNode {
	return s.GetToken(PPLParserPIPE, i)
}

func (s *SearchQueryContext) AllProcessingCommand() []IProcessingCommandContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IProcessingCommandContext); ok {
			len++
		}
	}

	tst := make([]IProcessingCommandContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IProcessingCommandContext); ok {
			tst[i] = t.(IProcessingCommandContext)
			i++
		}
	}

	return tst
}

func (s *SearchQueryContext) ProcessingCommand(i int) IProcessingCommandContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProcessingCommandContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProcessingCommandContext)
}

func (s *SearchQueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SearchQueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SearchQueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PPLParserListener); ok {
		listenerT.EnterSearchQuery(s)
	}
}
